objects/Contract.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASLS_Reagents</fullName>
                </value>
                <value>
                    <fullName>ASLS_Instruments</fullName>
                </value>
                <value>
                    <fullName>ASLS_Consumables</fullName>
                </value>
                <value>
                    <fullName>LST_Reagents</fullName>
                </value>
                <value>
                    <fullName>LST_Instruments</fullName>
                </value>
                <value>
                    <fullName>LST_Consumables</fullName>
                </value>
                <value>
                    <fullName>GS_Reagents</fullName>
                </value>
                <value>
                    <fullName>GS_Instruments</fullName>
                </value>
                <value>
                    <fullName>GS_Consumables</fullName>
                </value>
                <value>
                    <fullName>SDx_Reagents</fullName>
                </value>
                <value>
                    <fullName>SDx_Instruments</fullName>
                </value>
                <value>
                    <fullName>SDx_Consumables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <label>End User</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_ID__c</fullName>
        <label>Object ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnSupport__c</fullName>
        <formula>if( EndDate  &gt;  TODAY() , image(&quot;https://na1.salesforce.com/servlet/servlet.FileDownload?file=01530000000OQuw&quot;,&quot;Green&quot;), image(&quot;https://na1.salesforce.com/servlet/servlet.FileDownload?file=01530000000P5wZ&quot;,&quot;Red&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OnSupport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assist</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>SSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NORTH AMERICA</fullName>
                </value>
                <value>
                    <fullName>SOUTH AMERICA</fullName>
                </value>
                <value>
                    <fullName>WESTERN EUROPE</fullName>
                </value>
                <value>
                    <fullName>EASTERN EUROPE</fullName>
                </value>
                <value>
                    <fullName>MIDDLE EAST</fullName>
                </value>
                <value>
                    <fullName>AFRICA</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>KOSEA</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_ID__c</fullName>
        <formula>Asset__r.Support_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Total__c</fullName>
        <description>Total value of SAP Quote</description>
        <label>Quote Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_url_link__c</fullName>
        <label>B2B url link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Billing_Plan__c</fullName>
        <label>Billing Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yearly</fullName>
                    <default>true</default>
                    <label>Yearly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>ANP</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>CHS</fullName>
                </value>
                <value>
                    <fullName>CLH</fullName>
                </value>
                <value>
                    <fullName>CLR</fullName>
                </value>
                <value>
                    <fullName>CRD</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>DNA</fullName>
                </value>
                <value>
                    <fullName>ESS</fullName>
                </value>
                <value>
                    <fullName>FAP</fullName>
                </value>
                <value>
                    <fullName>FLR</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>GSAE</fullName>
                </value>
                <value>
                    <fullName>GSLE</fullName>
                </value>
                <value>
                    <fullName>HCS</fullName>
                </value>
                <value>
                    <fullName>HTS</fullName>
                </value>
                <value>
                    <fullName>IAS</fullName>
                </value>
                <value>
                    <fullName>ICP</fullName>
                </value>
                <value>
                    <fullName>ILB</fullName>
                </value>
                <value>
                    <fullName>INV</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>LCM</fullName>
                </value>
                <value>
                    <fullName>LVI</fullName>
                </value>
                <value>
                    <fullName>MAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Quote_No__c</fullName>
        <label>SAP Quote Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Volume__c</fullName>
        <label>Annual Volume</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Warr/Renew/Restart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Restart</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                    <default>true</default>
                    <label>Warranty</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PA_Start_Date__c</fullName>
        <label>PA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Deal_Name__c</fullName>
        <label>SAP Deal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Admin__c</fullName>
        <label>Contract Admin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <label>Contract Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PA_Submit_Date__c</fullName>
        <label>PA Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Date__c</fullName>
        <inlineHelpText>Date order booked in SAP. Not the contract start date</inlineHelpText>
        <label>SAP Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Person__c</fullName>
        <label>Contract Person</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Growth__c</fullName>
        <formula>(Quote_Total__c - Last_Year_Revenue__c) / Last_Year_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PA_Approve_Date__c</fullName>
        <label>PA Approve Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PA_Release_Date__c</fullName>
        <label>PA Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Deal_Status__c</fullName>
        <label>SAP Deal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Negotiations with customer</fullName>
                </value>
                <value>
                    <fullName>Submitted for approval</fullName>
                </value>
                <value>
                    <fullName>Approved - In Customer Care</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Year_Revenue__c</fullName>
        <description>If a renewal, this is the revenue generated in the previous term under this contract</description>
        <label>Last Year Revenue</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maintenance_Plant__c</fullName>
        <label>Maintenance Plant</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_File_Status__c</fullName>
        <label>Price File Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(TEXT(MONTH(StartDate)))=0, 0,20) + IF( LEN(TEXT( ContractTerm ))=0, 0,20) + IF( LEN( BillingCity ) = 0, 0,20) + IF( LEN( CustomerSignedId) = 0, 0,20) + IF( ISPICKVAL(  OwnerExpirationNotice ,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avg_Shipping_Charge__c</fullName>
        <description>Average shipping charge applied to this reagent deal or BioBar contract</description>
        <label>Avg Shipping Charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Biobar_Agreement_No__c</fullName>
        <label>Biobar Agreement No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Contract_Number__c</fullName>
        <label>SAP Contract Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Deal_Number_del__c</fullName>
        <label>SAP Deal Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundled_Support_Days__c</fullName>
        <formula>if(ISPICKVAL( Plan_Type__c , &quot;Enhanced&quot;),2,if(ISPICKVAL( Plan_Type__c , &quot;Premier&quot;),5,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundled Support Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Description__c</fullName>
        <label>Contract Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Agreement_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Agreement By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Customer Agreement By)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Agreement_Date__c</fullName>
        <label>Customer Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Items_After_Update__c</fullName>
        <label># Line Items After Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <description>To overcome CPQ access error while creating contracts for other businesses</description>
        <formula>SBQQ__Opportunity__r.RecordTypeId</formula>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Validity_End_Date__c</fullName>
        <label>Quote Validity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expiry_Reminder__c</fullName>
        <formula>ADDMONTHS(EndDate,-6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Expiry Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contract Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( TEXT(MONTH( StartDate ))) = 0, &quot;Contract Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(  TEXT(ContractTerm)) = 0, &quot;Contract Term, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( BillingCity ) = 0, &quot;Complete Contract Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( CustomerSignedId ) = 0, &quot;Customer Signature, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(  OwnerExpirationNotice ,&quot;&quot;), &quot;Owner Expiration Notice&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Items_Before_Update__c</fullName>
        <label># Line Items Before Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Customer_Numbers__c</fullName>
        <description>List of customer numbers (ShipTo&apos;s) associated with this contract</description>
        <label>Related Customer Number(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Validity_Start_Date__c</fullName>
        <label>Quote Validity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accountwide_Contract_Status__c</fullName>
        <label>Accountwide Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PKI Review</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Hardcopy Received</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PacCode_Items_Before_Update__c</fullName>
        <label># PacCode Items Before Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pac_Code_Items_After_Update__c</fullName>
        <label># Pac Code Items After Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eProcurement_Acceptance_Date__c</fullName>
        <label>eProcurement Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eProcurement_Start_Date_Contracts__c</fullName>
        <label>eProcurement Start Date Contracts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eProcurement_submit_date_contracts__c</fullName>
        <label>eProcurement submit date contracts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eProcurement_Catalog_Type_Contracts__c</fullName>
        <label>eProcurement Catalog Type Contracts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hosted</fullName>
                </value>
                <value>
                    <fullName>PunchOut</fullName>
                </value>
                <value>
                    <fullName>PunchOut Level 2</fullName>
                </value>
                <value>
                    <fullName>Live Price &amp; Availability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>eProcurement_e_catalog_lead_time_days__c</fullName>
        <label>eProcurement e-catalog lead time(# days)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eProcurement_Catalog_Channel_Contracts__c</fullName>
        <label>eProcurement Catalog Channel Contracts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SciQuest</fullName>
                </value>
                <value>
                    <fullName>Ariba</fullName>
                </value>
                <value>
                    <fullName>Hubwoo</fullName>
                </value>
                <value>
                    <fullName>Perfect Commerce</fullName>
                </value>
                <value>
                    <fullName>GHX</fullName>
                </value>
                <value>
                    <fullName>Intramalls</fullName>
                </value>
                <value>
                    <fullName>Customer Specific</fullName>
                </value>
                <value>
                    <fullName>ePlus</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>eProcurement_Order_Receipt_Mode_Contract__c</fullName>
        <label>eProcurement Order Receipt Mode Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated</fullName>
                </value>
                <value>
                    <fullName>Non-Automated (Email/Fax/Paper)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>SAPDeal</fullName>
        <active>true</active>
        <description>This record type is for preferred pricing contract setup in SAP</description>
        <label>SAP Deal</label>
    </recordTypes>
    <recordTypes>
        <fullName>LABWORKSSMA</fullName>
        <active>true</active>
        <description>Annual Software Maintenance Agreement for LABWORKS LIMS</description>
        <label>LABWORKS SMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReagentBioBar</fullName>
        <active>true</active>
        <description>Administration Agreements for Reagent Biobars at Accounts</description>
        <label>Reagent BioBar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reagent_Rental</fullName>
        <active>true</active>
        <label>Reagent Rental</label>
    </recordTypes>
    <recordTypes>
        <fullName>ServiceContract</fullName>
        <active>true</active>
        <description>Service contract for installed equipment</description>
        <label>Service Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Accountwide_Contract</fullName>
        <active>true</active>
        <description>This record type is to maintain Administration Agreements for Reagent Biobars/Accountwide contracts.</description>
        <label>Accountwide Contract</label>
    </recordTypes>
</CustomObject>